--- a/OF.OutlookFinderSetup/Bundle.wxs
+++ b/OF.OutlookFinderSetup/Bundle.wxs
@@ -10,7 +10,7 @@
     <util:RegistrySearch Root="HKLM" Key="SOFTWARE\JavaSoft\Java Runtime Environment" Value="CurrentVersion" Variable="JavaCurrentVersion" Win64="yes" />
     <util:RegistrySearch Root="HKLM" Key="SOFTWARE\Wow6432Node\JavaSoft\Java Runtime Environment" Value="CurrentVersion" Variable="JavaCurrentVersionWow" Win64="yes" />
     <Chain>
-      <PackageGroupRef Id="NetFx40ClientWeb" />
+      <PackageGroupRef Id="NetFx45Web" />
       <!--<PackageGroupRef Id="JavaRuntime"/>-->
       <ExePackage Id="JavaRuntime86" Name="JavaRuntime86" DownloadUrl="http://javadl.oracle.com/webapps/download/AutoDL?BundleId=216432" DetectCondition="(JavaCurrentVersion&gt;=&quot;1.8&quot;) OR (JavaCurrentVersionWow&gt;=&quot;1.8&quot;)" InstallCondition="NOT VersionNT64" InstallCommand="/s" Cache="no" Compressed="no" PerMachine="yes" Permanent="yes" Vital="yes" SuppressSignatureVerification="yes">
         <RemotePayload ProductName="jre-8u111-windows-i586.exe" Description="Java Platform SE binary x86" Size="56134208" Version="8.0.1110.14" Hash="11D6A333A6D1B939A4D40082A4ACAB737071A7B8" />
