--- a/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:fire="http://schemas.microsoft.com/wix/FirewallExtension">
-  <Product Id="*" Name="OutlookFinder" Language="1033" Version="1.0.3.1332" Manufacturer="FruitFactory" UpgradeCode="602854f0-ede9-4eba-bd8c-b6f91822510a" Codepage="1252">
+  <Product Id="*" Name="OutlookFinder" Language="1033" Version="1.0.3.1344" Manufacturer="FruitFactory" UpgradeCode="602854f0-ede9-4eba-bd8c-b6f91822510a" Codepage="1252">
     <Package InstallerVersion="200" Compressed="yes" Description="OutlookFinder" Manufacturer="FruitFactory" Languages="1033" SummaryCodepage="1252" InstallScope="perUser" InstallPrivileges="limited" />
     <!--<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." AllowDowngrades="no" />-->
     <Upgrade Id="602854f0-ede9-4eba-bd8c-b6f91822510a">
@@ -23,7 +23,7 @@
       <ComponentRef Id="INSTALLFOLDER" />
       <ComponentRef Id="INSTALLFOLDERLIB" />
       <ComponentRef Id="INSTALLFOLDERLIB64" />
-      <ComponentRef Id="INSTALLFOLDERJAVA"/>
+      <ComponentRef Id="INSTALLFOLDERJAVA" />
       <ComponentGroupRef Id="ProductComponents" />
     </Feature>
     <Feature Id="ElasticSearchProductFeature" Title="Elastic Search" Level="1" Absent="disallow" TypicalDefault="install" AllowAdvertise="no" ConfigurableDirectory="ELASTICSEASRCHINSTALLFOLDER" InstallDefault="local">
@@ -87,10 +87,8 @@
       <Custom Action="ErrorMessage" OnExit="error">NOT Installed</Custom>
     </InstallExecuteSequence>
     <!-- Properties for all current versions of the .NET Framework are available here: http://wix.sourceforge.net/manual-wix3/wixnetfxextension.htm -->
-    <PropertyRef Id="NETFRAMEWORK45"/>
-    <Condition Message="This application requires .NET Framework 4.5. Please install the .NET Framework then run this installer again.">
-      <![CDATA[Installed OR NETFRAMEWORK45]]>
-    </Condition>
+    <PropertyRef Id="NETFRAMEWORK45" />
+    <Condition Message="This application requires .NET Framework 4.5. Please install the .NET Framework then run this installer again."><![CDATA[Installed OR NETFRAMEWORK45]]></Condition>
     <!-- Check some requirements ONLY on "install", but not on modify or uninstall. -->
     <Property Id="JAVA_CURRENT_VERSION">
       <RegistrySearch Id="JRE_CURRENT_VERSION_REGSEARCH" Root="HKLM" Key="SOFTWARE\JavaSoft\Java Runtime Environment" Name="CurrentVersion" Type="raw" Win64="yes" />
@@ -214,7 +212,6 @@
               <RemoveFile Id="modulesFile" Name="*.*" On="uninstall" />
               <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="modules" />
             </Component>
-
             <Directory Id="ELASTICSEASRCHINSTALLFOLDERAGGSMATRIXSTATS" Name="aggs-matrix-stats">
               <Component Id="ELASTICSEASRCHINSTALLFOLDERAGGSMATRIXSTATS" Guid="15248272-7710-4EFC-A8B6-9F0C158C268F">
                 <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERAGGSMATRIXSTATS" />
@@ -222,7 +219,6 @@
                 <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="aggs-matrix-stats" />
               </Component>
             </Directory>
-
             <Directory Id="ELASTICSEASRCHINSTALLFOLDERINGESTCOMMON" Name="ingest-common">
               <Component Id="ELASTICSEASRCHINSTALLFOLDERINGESTCOMMON" Guid="B8778736-78DE-4880-A6D9-9C61B93985F1">
                 <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERINGESTCOMMON" />
@@ -230,7 +226,6 @@
                 <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="ingest-common" />
               </Component>
             </Directory>
-
             <Directory Id="ELASTICSEASRCHINSTALLFOLDERLANGEXPRESSION" Name="lang-expression">
               <Component Id="ELASTICSEASRCHINSTALLFOLDERLANGEXPRESSION" Guid="C96046C2-8CFD-43FA-9BB1-14D1A274FF12">
                 <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERLANGEXPRESSION" />
@@ -238,7 +233,6 @@
                 <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="lang-expression" />
               </Component>
             </Directory>
-
             <Directory Id="ELASTICSEASRCHINSTALLFOLDERLANGGROOVY" Name="lang-groovy">
               <Component Id="ELASTICSEASRCHINSTALLFOLDERLANGGROOVY" Guid="8953CFBB-6FE0-41E8-950D-C5D005230A5D">
                 <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERLANGGROOVY" />
@@ -246,7 +240,6 @@
                 <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="lang-groovy" />
               </Component>
             </Directory>
-
             <Directory Id="ELASTICSEASRCHINSTALLFOLDERLANGMUSTACHE" Name="lang-mustache">
               <Component Id="ELASTICSEASRCHINSTALLFOLDERLANGMUSTACHE" Guid="7FA57CD0-93EA-4082-822C-0A32DAB819A9">
                 <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERLANGMUSTACHE" />
@@ -254,7 +247,6 @@
                 <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="lang-mustache" />
               </Component>
             </Directory>
-
             <Directory Id="ELASTICSEASRCHINSTALLFOLDERLANGPAINLESS" Name="lang-painless">
               <Component Id="ELASTICSEASRCHINSTALLFOLDERLANGPAINLESS" Guid="22570BD5-9CC2-4F69-99F9-7EAD84B145F3">
                 <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERLANGPAINLESS" />
@@ -262,7 +254,6 @@
                 <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="lang-painless" />
               </Component>
             </Directory>
-
             <Directory Id="ELASTICSEASRCHINSTALLFOLDERPERCOLATOR" Name="percolator">
               <Component Id="ELASTICSEASRCHINSTALLFOLDERPERCOLATOR" Guid="878879D3-BCAF-4342-A6A1-ECCF47B3BB04">
                 <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERPERCOLATOR" />
@@ -270,7 +261,6 @@
                 <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="percolator" />
               </Component>
             </Directory>
-
             <Directory Id="ELASTICSEASRCHINSTALLFOLDERREINDEX" Name="reindex">
               <Component Id="ELASTICSEASRCHINSTALLFOLDERREINDEX" Guid="BA563125-A614-4637-9CA9-0BEDF87FC441">
                 <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERREINDEX" />
@@ -278,7 +268,6 @@
                 <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="reindex" />
               </Component>
             </Directory>
-
             <Directory Id="ELASTICSEASRCHINSTALLFOLDERTRANSPORTNETTY3" Name="transport-netty3">
               <Component Id="ELASTICSEASRCHINSTALLFOLDERTRANSPORTNETTY3" Guid="61256374-5154-4738-98B0-4362437EE29C">
                 <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERTRANSPORTNETTY3" />
@@ -286,7 +275,6 @@
                 <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="transport-netty3" />
               </Component>
             </Directory>
-
             <Directory Id="ELASTICSEASRCHINSTALLFOLDERTRANSPORTNETTY4" Name="transport-netty4">
               <Component Id="ELASTICSEASRCHINSTALLFOLDERTRANSPORTNETTY4" Guid="9989F1CB-B6C6-4602-B457-317C1BF45FED">
                 <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERTRANSPORTNETTY4" />
@@ -294,7 +282,6 @@
                 <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="transport-netty4" />
               </Component>
             </Directory>
-
           </Directory>
         </Directory>
       </Directory>
@@ -407,26 +394,20 @@
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERBIN]" KeyPath="yes" />
         </RegistryKey>
         <File Id="_elasticsearch_" Name="elasticsearch" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
-
         <File Id="_elasticsearch_keystore_" Name="elasticsearch-keystore" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
         <File Id="_elasticsearch_plugin_" Name="elasticsearch-plugin" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
         <File Id="_elasticsearch_systemd_pre_exec_" Name="elasticsearch-systemd-pre-exec" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
         <File Id="_elasticsearch_translog_" Name="elasticsearch-translog" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
-
-
         <File Id="_elasticsearch_bat" Name="elasticsearch.bat" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
         <File Id="_elasticsearch_in_bat" Name="elasticsearch.in.bat" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
-
         <File Id="_elasticsearch_keystore_bat_" Name="elasticsearch-keystore.bat" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
         <File Id="_elasticsearch_plugin_bat_" Name="elasticsearch-plugin.bat" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
         <File Id="_elasticsearch_service_bat_" Name="elasticsearch-service.bat" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
         <File Id="_elasticsearch_translog_bat_" Name="elasticsearch-translog.bat" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
-
         <File Id="_elasticsearch_service_mgr_exe" Name="elasticsearch-service-mgr.exe" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\"></File>
         <File Id="_elasticsearch_service_x64_exe" Name="elasticsearch-service-x64.exe" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
         <File Id="_elasticsearch_service_x86_exe" Name="elasticsearch-service-x86.exe" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
         <File Id="_elasticsearch_in_sh" Name="elasticsearch.in.sh" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
-
       </Component>
       <!--config-->
       <Component Id="ElasticSearchConfigProductComponent" Guid="C7B8FDDD-0F0C-4ABD-83ED-58B15C1262AA" DiskId="1" Directory="ELASTICSEASRCHINSTALLFOLDERCONFIG">
@@ -442,13 +423,11 @@
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERSCRIPTS]" KeyPath="yes" />
         </RegistryKey>
       </Component>
-      
       <!--lib-->
       <Component Id="ElasticSearchLibProductComponent" Guid="F3D1954B-7861-41C6-98A4-3D21E2A3CB32" DiskId="1" Directory="ELASTICSEASRCHINSTALLFOLDERLIB">
         <RegistryKey Root="HKCU" Key="Software\ElasticSearch">
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERLIB]" KeyPath="yes" />
         </RegistryKey>
-
         <File Id="elasticsearch_5_3_0_jar" Name="elasticsearch-5.3.0.jar" Source="$(var.SolutionDir)Toolkits\Elasticsearch\lib\" />
         <File Id="HdrHistogram_2_1_6_jar" Name="HdrHistogram-2.1.6.jar" Source="$(var.SolutionDir)Toolkits\Elasticsearch\lib\" />
         <File Id="hppc_0_7_1_jar" Name="hppc-0.7.1.jar" Source="$(var.SolutionDir)Toolkits\Elasticsearch\lib\" />
@@ -484,7 +463,6 @@
         <File Id="spatial4j_0_6_jar" Name="spatial4j-0.6.jar" Source="$(var.SolutionDir)Toolkits\Elasticsearch\lib\" />
         <File Id="t_digest_3_0_jar" Name="t-digest-3.0.jar" Source="$(var.SolutionDir)Toolkits\Elasticsearch\lib\" />
       </Component>
-      
       <Component Id="ElasticSearchModulesAggMatrixStatsProductComponent" Guid="7BACBEF6-7A63-46F3-8D1E-85486A5D870A" DiskId="1" Directory="ELASTICSEASRCHINSTALLFOLDERAGGSMATRIXSTATS">
         <RegistryKey Root="HKCU" Key="Software\ElasticSearch">
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERAGGSMATRIXSTATS]" KeyPath="yes" />
@@ -492,9 +470,7 @@
         <File Id="aggs_matrix_stats_5_3_0_jar" Name="aggs-matrix-stats-5.3.0.jar" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\aggs-matrix-stats\" />
         <File Id="plugin_descriptor_properties_1" Name="plugin-descriptor.properties" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\aggs-matrix-stats\" />
       </Component>
-      
       <!--<File Id="" Name="" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\\" />-->
-        
       <Component Id="ElasticSearchModulesIngestCommonProductComponent" Guid="3391838D-99D8-49D2-9378-8055987C233E" DiskId="1" Directory="ELASTICSEASRCHINSTALLFOLDERINGESTCOMMON">
         <RegistryKey Root="HKCU" Key="Software\ElasticSearch">
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERINGESTCOMMON]" KeyPath="yes" />
@@ -504,7 +480,6 @@
         <File Id="joni_2_1_6_jar" Name="joni-2.1.6.jar" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\ingest-common\" />
         <File Id="plugin_descriptor_properties_2" Name="plugin-descriptor.properties" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\ingest-common\" />
       </Component>
-      
       <Component Id="ElasticSearchModulesLangExpressionProductComponent" Guid="DDAACF93-6C3F-4C78-A1BE-431C3C6F89BE" DiskId="1" Directory="ELASTICSEASRCHINSTALLFOLDERLANGEXPRESSION">
         <RegistryKey Root="HKCU" Key="Software\ElasticSearch">
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERLANGEXPRESSION]" KeyPath="yes" />
@@ -518,7 +493,6 @@
         <File Id="plugin_security_policy_1" Name="plugin-security.policy" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\lang-expression\" />
         <File Id="plugin_descriptor_properties_3" Name="plugin-descriptor.properties" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\lang-expression\" />
       </Component>
-      
       <Component Id="ElasticSearchModulesLangGroovyProductComponent" Guid="E7DE71D5-FB0D-47F7-8F47-BE55810CE86D" DiskId="1" Directory="ELASTICSEASRCHINSTALLFOLDERLANGGROOVY">
         <RegistryKey Root="HKCU" Key="Software\ElasticSearch">
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERLANGGROOVY]" KeyPath="yes" />
@@ -528,7 +502,6 @@
         <File Id="plugin_security_policy_2" Name="plugin-security.policy" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\lang-groovy\" />
         <File Id="plugin_descriptor_properties_4" Name="plugin-descriptor.properties" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\lang-groovy\" />
       </Component>
-      
       <Component Id="ElasticSearchModulesLangMustacheProductComponent" Guid="9D805153-3EE4-4A8D-ACFB-0236DCD07966" DiskId="1" Directory="ELASTICSEASRCHINSTALLFOLDERLANGMUSTACHE">
         <RegistryKey Root="HKCU" Key="Software\ElasticSearch">
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERLANGMUSTACHE]" KeyPath="yes" />
@@ -538,7 +511,6 @@
         <File Id="plugin_security_policy_3" Name="plugin-security.policy" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\lang-mustache\" />
         <File Id="plugin_descriptor_properties_5" Name="plugin-descriptor.properties" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\lang-mustache\" />
       </Component>
-      
       <Component Id="ElasticSearchModulesLangPainlessProductComponent" Guid="3CC3B360-FB9E-4E22-94B9-81BEB07CF296" DiskId="1" Directory="ELASTICSEASRCHINSTALLFOLDERLANGPAINLESS">
         <RegistryKey Root="HKCU" Key="Software\ElasticSearch">
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERLANGPAINLESS]" KeyPath="yes" />
@@ -549,15 +521,13 @@
         <File Id="plugin_security_policy_4" Name="plugin-security.policy" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\lang-painless\" />
         <File Id="plugin_descriptor_properties_6" Name="plugin-descriptor.properties" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\lang-painless\" />
       </Component>
-    
       <Component Id="ElasticSearchModulesPercolatorProductComponent" Guid="B25F1E02-E5B9-41F4-96D5-2B014371569F" DiskId="1" Directory="ELASTICSEASRCHINSTALLFOLDERPERCOLATOR">
         <RegistryKey Root="HKCU" Key="Software\ElasticSearch">
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERPERCOLATOR]" KeyPath="yes" />
         </RegistryKey>
-        <File Id="percolator_5_3_0_jar" Name="percolator-5.3.0.jar" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\percolator\" />  
+        <File Id="percolator_5_3_0_jar" Name="percolator-5.3.0.jar" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\percolator\" />
         <File Id="plugin_descriptor_properties_7" Name="plugin-descriptor.properties" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\percolator\" />
       </Component>
-      
       <Component Id="ElasticSearchModulesReindexProductComponent" Guid="D28EDDCE-47E7-4C26-BDF1-8641202E29C3" DiskId="1" Directory="ELASTICSEASRCHINSTALLFOLDERREINDEX">
         <RegistryKey Root="HKCU" Key="Software\ElasticSearch">
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERREINDEX]" KeyPath="yes" />
@@ -572,7 +542,6 @@
         <File Id="rest_5_3_0_jar" Name="rest-5.3.0.jar" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\reindex\" />
         <File Id="plugin_descriptor_properties_8" Name="plugin-descriptor.properties" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\reindex\" />
       </Component>
-
       <Component Id="ElasticSearchModulesTransportNetty3ProductComponent" Guid="5A1F6C12-4A09-4696-96E9-5087A73F1105" DiskId="1" Directory="ELASTICSEASRCHINSTALLFOLDERTRANSPORTNETTY3">
         <RegistryKey Root="HKCU" Key="Software\ElasticSearch">
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERTRANSPORTNETTY3]" KeyPath="yes" />
@@ -582,7 +551,6 @@
         <File Id="plugin_security_policy_5" Name="plugin-security.policy" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\transport-netty3\" />
         <File Id="plugin_descriptor_properties_9" Name="plugin-descriptor.properties" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\transport-netty3\" />
       </Component>
-      
       <Component Id="ElasticSearchModulesTransportNetty4ProductComponent" Guid="F551EDB6-DC3A-4B25-A57D-789B8B93F243" DiskId="1" Directory="ELASTICSEASRCHINSTALLFOLDERTRANSPORTNETTY4">
         <RegistryKey Root="HKCU" Key="Software\ElasticSearch">
           <RegistryValue Type="string" Name="Installed" Value="[ELASTICSEASRCHINSTALLFOLDERTRANSPORTNETTY4]" KeyPath="yes" />
@@ -597,7 +565,6 @@
         <File Id="transport_netty4_5_3_0_jar" Name="transport-netty4-5.3.0.jar" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\transport-netty4\" />
         <File Id="plugin_security_policy_6" Name="plugin-security.policy" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\transport-netty4\" />
         <File Id="plugin_descriptor_properties_10" Name="plugin-descriptor.properties" Source="$(var.SolutionDir)Toolkits\Elasticsearch\modules\transport-netty4\" />
-  
       </Component>
     </ComponentGroup>
   </Fragment>
